# PoseTrack-CVPR2017

./: .gitmodules  README.md  demo_posetrack.m  startup.m
data/: download_models.sh
data/bonn-multiperson-posetrack/annolist/test/: annolist.mat
data/bonn-multiperson-posetrack/annolist/train/: annolist.mat
posetrack/eval/: pt_CLEAR_MOT_HUN.m  pt_assignGTmulti.m  pt_convert_annolist_to_mot.m  pt_convert_people_to_struct.m  pt_convert_to_mpii_format.m  pt_eval_pose_tracking.m  pt_evaluateAP.m  pt_generate_result_file.m  pt_printMetrics.m  pt_util_get_head_size.m
posetrack/lib/: MultiScaleDetections.m  pt_build_frame_pairs.m  pt_cache_cnn_features.m  pt_cache_deepmatching_features.m  pt_compute_final_posetrack_predictions.m  pt_compute_spatial_pairwise_probabilities.m  pt_compute_temporal_pairwise_probabilities.m  pt_demo_multiperson.m  pt_exp_params.m  pt_extract_features_multiscale.m  pt_generate_frame_windows.m  pt_generate_location_candidates.m  pt_get_anno_joints.m  pt_get_anno_joints_with_occ.m  pt_get_corres_around_point.m  pt_get_corres_in_bbox.m  pt_get_spatial_features_dm.m  pt_get_spatial_features_neighbour_img.m  pt_get_spatial_features_neighbour_locref.m  pt_get_temporal_features_dm.m  pt_get_temporal_features_img_dm.m  pt_load_dm_correspondences.m  pt_map_detection_ids.m  pt_mot_get_spatial_features_deep_matching.m  pt_pose_tracking.m  pt_pose_tracking_nodes_and_edges.m  pt_scoremap_to_detections.m  pt_track_joint.m  pt_train_spatial_part_regr.m  pt_train_temporal_part_regr.m  pt_vis_people.m  pt_visualise_annolist.m  pt_visualize_tracks.m
posetrack/solver/: CMakeLists.txt
posetrack/solver/cmake/modules/: FindGUROBI.cmake
posetrack/solver/include/andres/: timer.hxx
posetrack/solver/include/andres/graphics/: graphics-hdf5.hxx  graphics.hxx  line.hxx  point.hxx  projection.hxx  svg.hxx  types.hxx
posetrack/solver/include/andres/ilp/: gurobi-callback.hxx  gurobi.hxx
posetrack/solver/include/pose-track/: detection.hxx  join.hxx  problem.hxx  pt-solver-callback.hxx  solution.hxx  solver.hxx
posetrack/solver/src/pose-track/research/: plot-problem.cxx  pt-io-hdf5.hxx  pt-solver-callback.cxx
posetrack/utils/: boxoverlap_one2one.m
